--- a/templates/search_data.html
+++ b/templates/search_data.html
@@ -761,7 +761,7 @@
                 <p><strong>เลขบัตรประชาชน:</strong> {{ record.เลขบัตรประชาชน }}</p>
                 <p><strong>จดทะเบียน:</strong> {{ record['จดทะเบียน'] }}</p>
                 <p><strong>ชื่อกิจการ:</strong> {{ record.ชื่อกิจการ }}</p>
-                <p><strong>ประเภทธุรกิจ:</strong> {{ record['ประเภทธุรกิจ'] }}</p>
+                <p><strong>จังหวัดที่อยู่:</strong> {{ record['จังหวัดที่อยู่'] }}</p>
                 <p><strong>ที่อยู่จดทะเบียน:</strong> {{ record['ที่อยู่จดทะเบียน'] }}</p>
                 <p><strong>สถานะ:</strong> {{ record.สถานะ }}</p>
                 <p><strong>วงเงินที่ต้องการ:</strong> {{ record['วงเงินที่ต้องการ'] }}</p>
